# datadex

./: pyproject.toml
.devcontainer/: devcontainer.json
datadex/: assets.py  jobs.py  resources.py
dbt/: dbt_project.yml  dbt_project_old.yml  profiles.yml
dbt/models/: ALIM.sql  ALOC_REC.sql  CDT.sql  ESTAB.sql  ESTABELECIMENTOS.sql  PROD.sql  PROD_UF.sql  ULT_ALIM.sql  schema.yml  sources.yml  temp.sql
dbt/models/RAW/: TB_MAPAREL_PRODUCAO.sql  TB_UNIDADE_CENTRO_CUSTO.sql
dbt/models/output/: UF_CDT.sql  UF_ESTAB.sql  UF_PROD.sql
dbt/models/staging/: CR_PROD.sql  TB_CENTRO_CUSTO.sql  TB_CENTRO_CUSTO_MOVIMENTACAO.sql  TB_CRITERIO_RATEIO.sql  TB_DESPESA.sql  TB_DESPESA_CENTRO_CUSTO.sql  TB_GRUPO_CUSTO.sql  TB_ITEM_CUSTO.sql  TB_ITEM_PRODUCAO.sql  TB_MOVIMENTACAO_CUSTO.sql  TB_PRODUCAO.sql  TB_TIPO_CENTRO_CUSTO.sql  TB_TIPO_PRESTADOR.sql  TB_TIPO_UNIDADE.sql  TB_UNIDADE_CENTRO_CUSTO.sql  ULT_ALIM.sql
notebooks/: output.ipynb
portal/: _quarto.yml
