[project]
name = "playground"
version = "0.0.1"
authors = [{ name = "Frederico Guth" }]
dependencies = [
    "dagster-dbt",
    "dagster-duckdb-pandas",
    "dagster-duckdb",
    "dagster",
    "dbt-core",
    "dbt-duckdb",
    "duckdb",
    "fsspec",
    "frictionless",
    "ipykernel",
    "ipywidgets",
    "itables",
    "matplotlib",
    "nbclient",
    "nbformat",
    "pyarrow",
    "regex",
    "tqdm",
    "sqlalchemy"
]

requires-python = ">=3.11, <=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://fredguth.github.io/datadex/"
Changelog = "https://github.com/fredguth/datadex/commits/main/"
Issues = "https://github.com/fredguth/datadex/issues"
CI = "https://github.com/fredguth/datadex/actions"

[project.optional-dependencies]
dev = ["dagit", "shandy-sqlfmt[jinjafmt]", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["datadex"]

[tool.setuptools.package-data]
"datadex" = ["../dbt/**"]

[tool.dagster]
module_name = "datadex"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
length-sort = true
